--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
 
 
     <Button
+        android:id="@+id/btn_send_msg"
         android:layout_width="100dp"
         android:layout_alignParentEnd="true"
         android:layout_height="wrap_content"
